# FaceAuth

./: .gitignore  AGENTS.md  README.md  ai_server.py  camara.py  cliente.py  hola.txt  id_model.py  important_requirements.txt  inception_blocks.py  k_mean.py  main.py  manage.py  model_view.py  pyproject.toml  requirements.txt  server.py  triplet_loss.py  utils.py
centroides/: centros.csv
entrenamiento/: dataset_loader.py  fit_model.py  model.py  triplet_loss.py
face_auth/: FaceDetector.py  FaceEncoder.py  Identifier.py  Identity.py  Image_processor.py  ImgProcessor.py  __init__.py  face_detector.py  face_encoder.py  face_model.py  image_processor.py  img_processor.py  inception_blocks2.py  kmean.py  utils.py
face_identity/: Identificador.py  Image_processor.py  face_model.py  inception_blocks2.py  kmean.py  utils.py
guardado/centroides/: centros.csv
templates/: identify_face.html  identify_images.html  multiupload_image.html  register_face.html
